@@ -3,18 +3,17 @@ package com.snippetsearcher.snippet.service;
 import com.snippetsearcher.snippet.client.AssetClient;
 import com.snippetsearcher.snippet.client.PermissionClient;
 import com.snippetsearcher.snippet.client.language.LanguageClient;
-import com.snippetsearcher.snippet.dto.LanguageDtos;
-import com.snippetsearcher.snippet.dto.PermissionTypeDto;
-import com.snippetsearcher.snippet.dto.SnippetPermissionDto;
-import com.snippetsearcher.snippet.dto.UserAccountDto;
+import com.snippetsearcher.snippet.dto.*;
 import com.snippetsearcher.snippet.dto.request.CreateSnippetRequest;
 import com.snippetsearcher.snippet.dto.request.ListSnippetsQuery;
 import com.snippetsearcher.snippet.dto.request.ShareSnippetRequest;
 import com.snippetsearcher.snippet.dto.request.UpdateSnippetRequest;
+import com.snippetsearcher.snippet.dto.response.FriendsResponse;
 import com.snippetsearcher.snippet.dto.response.ListSnippetsResponse;
 import com.snippetsearcher.snippet.dto.response.SnippetLintErrorResponse;
 import com.snippetsearcher.snippet.dto.response.SnippetListItemResponse;
 import com.snippetsearcher.snippet.dto.response.SnippetResponse;
+import com.snippetsearcher.snippet.dto.response.SnippetTestExecutionResponse;
 import com.snippetsearcher.snippet.dto.response.SnippetTestResponse;
 import com.snippetsearcher.snippet.exception.SnippetNotFoundException;
 import com.snippetsearcher.snippet.jobs.SnippetJobProducer;
@@ -29,6 +28,7 @@ import java.nio.charset.StandardCharsets;
 import java.time.OffsetDateTime;
 import java.util.List;
 import java.util.Map;
+import java.util.Objects;
 import java.util.Set;
 import java.util.UUID;
 import java.util.stream.Collectors;
@@ -155,20 +155,48 @@ public class SnippetService {
         snippetsPage.getNumber(), snippetsPage.getSize(), snippetsPage.getTotalElements(), items);
   }
 
-  @Transactional(readOnly = true)
+  @Transactional
   public SnippetResponse getSnippet(Jwt jwt, UUID snippetId) {
     UserAccountDto user = ensureUser(jwt);
-    Snippet snippet = loadSnippetOwnedBy(snippetId, user.id());
+    UUID userId = user.id();
+
+    // 2) Pedimos a permission-service qué snippets puede ver este usuario
+    var permissions = permissionClient.listSnippetPermissions(jwt.getTokenValue());
+
+    boolean hasAccess = permissions.stream().anyMatch(p -> p.snippetId().equals(snippetId));
+
+    if (!hasAccess) {
+      // Podés tirar tu propia excepción 404/403 si preferís
+      throw new IllegalStateException("Snippet no encontrado o sin permisos");
+    }
+
+    // 3) Cargamos el snippet desde la base (da igual si el permiso es OWNER o SHARED)
+    Snippet snippet =
+        snippetRepository
+            .findById(snippetId)
+            .orElseThrow(() -> new IllegalStateException("Snippet no encontrado"));
+
+    // 4) Lógica original: contenido, lint, tests, compliance
     String content = downloadSnippetContent(snippet);
+
     List<SnippetLintErrorResponse> lintErrors =
         collectLintErrors(snippet.getLanguage(), snippet.getVersion(), content);
+
     List<SnippetTestResponse> tests =
         snippetTestRepository.findBySnippetId(snippet.getId()).stream()
             .map(SnippetTestResponse::fromEntity)
             .toList();
+
+    boolean complianceUpdated = applyLintResult(snippet, lintErrors);
+    if (complianceUpdated) {
+      snippetRepository.save(snippet);
+    }
+
     SnippetComplianceStatus complianceStatus =
         lintErrors.isEmpty() ? SnippetComplianceStatus.VALID : SnippetComplianceStatus.INVALID;
-    String complianceMessage = lintErrors.isEmpty() ? null : lintErrors.getFirst().message();
+
+    String complianceMessage = lintErrors.isEmpty() ? null : lintErrors.get(0).message();
+
     return SnippetResponse.fromEntity(
         snippet, content, lintErrors, tests, complianceStatus, complianceMessage);
   }
@@ -218,8 +246,53 @@ public class SnippetService {
     return SnippetResponse.fromEntity(snippet);
   }
 
-  public UserAccountDto ensureUserForController(Jwt jwt) {
-    return ensureUser(jwt);
+  @Transactional
+  public List<FriendsResponse> getFriends(Jwt jwt) {
+    var user = ensureUser(jwt);
+
+    try {
+      List<PermissionUserDto> users = permissionClient.getUsers(jwt.getTokenValue());
+      UUID currentUserId = user.id();
+
+      return users.stream()
+          .filter(u -> !currentUserId.equals(u.id()))
+          .map(
+              u ->
+                  new FriendsResponse(
+                      u.id().toString(), // UUID → string
+                      u.name(),
+                      u.email()))
+          .toList();
+
+    } catch (RestClientException | IllegalStateException ex) {
+      log.warn("No se pudo obtener la lista de amigos: {}", ex.getMessage());
+      return List.of();
+    }
+  }
+
+  @Transactional
+  public SnippetTestExecutionResponse executeSnippetTest(Jwt jwt, UUID snippetId, UUID testId) {
+    UserAccountDto user = ensureUser(jwt);
+    Snippet snippet = loadSnippetOwnedBy(snippetId, user.id());
+    SnippetTest test =
+        snippetTestRepository
+            .findByIdAndSnippetId(testId, snippet.getId())
+            .orElseThrow(() -> new IllegalArgumentException("El test indicado no existe."));
+
+    String snippetContent = downloadSnippetContent(snippet);
+    String executableContent = buildExecutableContent(snippetContent, test.getScript());
+    LanguageDtos.ExecuteResponse response = executeTest(snippet, executableContent);
+    updateTestResult(test, response);
+    snippetTestRepository.save(test);
+
+    boolean passed = response.exitCode() == 0;
+    return new SnippetTestExecutionResponse(
+        test.getId(),
+        passed,
+        response.exitCode(),
+        response.stdout(),
+        response.stderr(),
+        test.getLastRunAt());
   }
 
   private String uploadValidatedSnippetContent(
@@ -253,7 +326,7 @@ public class SnippetService {
         collectLintErrors(language, version, new String(content, StandardCharsets.UTF_8));
 
     if (!errors.isEmpty()) {
-      SnippetLintErrorResponse firstError = errors.getFirst();
+      SnippetLintErrorResponse firstError = errors.get(0);
       String violatedRule =
           StringUtils.hasText(firstError.rule()) ? firstError.rule() : "desconocida";
       throw new IllegalArgumentException(
@@ -284,13 +357,11 @@ public class SnippetService {
 
     List<LanguageDtos.AnalyzeIssue> filtered =
         lintIssueFilter.filter(
-            response != null ? response.issues() : List.of(), lintingRulesService.getLintingRules());
+            response != null ? response.issues() : List.of(),
+            lintingRulesService.getLintingRules());
 
     return filtered.stream()
-        .map(
-            i ->
-                new SnippetLintErrorResponse(
-                    i.rule(), i.startLine(), i.startCol(), i.message()))
+        .map(i -> new SnippetLintErrorResponse(i.rule(), i.startLine(), i.startCol(), i.message()))
         .toList();
   }
 
@@ -304,12 +375,13 @@ public class SnippetService {
   private LanguageDtos.ExecuteResponse executeTest(Snippet snippet, String executableContent) {
     try {
       return languageClient.execute(
-          new LanguageDtos.ExecuteRequest(
-              snippet.getLanguage(), normalizeVersion(snippet.getVersion()), executableContent));
+              new LanguageDtos.ExecuteRequest(
+                      snippet.getLanguage(), snippet.getVersion(), executableContent, null));
     } catch (Exception ex) {
       throw new IllegalStateException("No se pudo ejecutar el test del snippet.", ex);
     }
   }
+
 
   private void updateTestResult(SnippetTest test, LanguageDtos.ExecuteResponse response) {
     test.setLastRunAt(OffsetDateTime.now());
@@ -395,6 +467,28 @@ public class SnippetService {
     snippet.setComplianceMessage(null);
   }
 
+  private boolean applyLintResult(Snippet snippet, List<SnippetLintErrorResponse> lintErrors) {
+    SnippetComplianceStatus newStatus =
+        lintErrors == null || lintErrors.isEmpty()
+            ? SnippetComplianceStatus.VALID
+            : SnippetComplianceStatus.INVALID;
+    String newMessage =
+        lintErrors == null || lintErrors.isEmpty() ? null : lintErrors.getFirst().message();
+
+    if (newStatus == snippet.getComplianceStatus()
+        && Objects.equals(newMessage, snippet.getComplianceMessage())) {
+      return false;
+    }
+
+    snippet.setComplianceStatus(newStatus);
+    snippet.setComplianceMessage(newMessage);
+    return true;
+  }
+
+  public UserAccountDto ensureUserForController(Jwt jwt) {
+    return ensureUser(jwt);
+  }
+
   private UserAccountDto ensureUser(Jwt jwt) {
     try {
       return permissionClient.ensureUser(jwt.getTokenValue());
@@ -460,4 +554,24 @@ public class SnippetService {
     }
     return assetKey.substring(lastDot + 1);
   }
+  @Transactional(readOnly = true)
+  public LanguageDtos.ExecuteResponse executeSnippet(Jwt jwt, UUID snippetId, String input) {
+    UserAccountDto user = ensureUser(jwt);
+    Snippet snippet = loadSnippetOwnedBy(snippetId, user.id());
+
+    String snippetContent = downloadSnippetContent(snippet);
+
+    try {
+      return languageClient.execute(
+              new LanguageDtos.ExecuteRequest(
+                      snippet.getLanguage(),
+                      snippet.getVersion(),
+                      snippetContent,
+                      input
+              ));
+    } catch (Exception ex) {
+      throw new IllegalStateException("No se pudo ejecutar el snippet.", ex);
+    }
+  }
+
 }
